WebAdmin: Dashboard show the total of applicants and jobs.
The API was change to, to provider those values

--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-filter/applicants-filter.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-filter/applicants-filter.component.html
@@ -16,7 +16,7 @@
             <input #gb type="text" pInputText size="50" placeholder="Applicants">
         </div>
 
-      <p-dataTable [value]="applicants" [responsive]="true" emptyMessage="No applicants available." [globalFilter]="gb" #table>
+      <p-dataTable [value]="applicants" [responsive]="true" [rows]="15" [paginator]="true" emptyMessage="No applicants available." [globalFilter]="gb" #table>
 
 
           <p-column field="fullname" header="Name" [sortable]="true" styleClass="col-size"></p-column>
