--- a/UI-Angular/JobsAdmin/src/app/dashboard/dashboard.component.html
+++ b/UI-Angular/JobsAdmin/src/app/dashboard/dashboard.component.html
@@ -7,23 +7,24 @@
       <div class="card clearfix summary">
           <span class="title">Applicants</span>
           <span class="detail">New applicants</span>
-          <span class="count visitors">10</span>
+          <span class="count visitors">{{total_newapplicants}}</span>
       </div>
   </div>
   <div class="ui-g-12 ui-md-4">
       <div class="card clearfix summary">
           <span class="title">Applicants</span>
           <span class="detail">Total applicants</span>
-          <span class="count purchases">30</span>
+          <span class="count purchases">{{total_applicants}}</span>
       </div>
   </div>
   <div class="ui-g-12 ui-md-4">
       <div class="card clearfix summary">
           <span class="title">Jobs</span>
           <span class="detail">Jobs published</span>
-          <span class="count revenue">9</span>
+          <span class="count revenue">{{total_jobs}}</span>
       </div>
   </div>
+
 
 
 
