--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-add-notes/applicants-add-notes.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-add-notes/applicants-add-notes.component.html
@@ -1,130 +1,94 @@
 <div class="container card-white">
-  <form autocomplete="off" #applicantForm="ngForm" (ngSubmit)="addApplicant(applicantForm)">
-
+  <form autocomplete="off" #applicantForm="ngForm" (ngSubmit)="save(applicantForm)">
+    <!-- <form autocomplete="off" #applicantForm="ngForm" (ngSubmit)="save(applicantForm)"> -->
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>{{titlePage}}</h1>
-        <hr>
-      </div>
+        <p-panel header={{titlePage}} [style]="{'height':'100%'}" [toggleable]="true" [style]="{'margin-bottom':'20px'}">
 
-      <div class="ui-g-12 ui-md-8 ui-fluid">
-        <br>
-        <span class="ui-float-label">
-          <input pInputText type="text" id="float-input" name="fullname" #fullname="ngModel" [(ngModel)]="applicant.fullname" required>
-          <label for="float-input">Name</label>
-        </span>
-      </div>
 
-      <div class="ui-g-12 ui-md-4 ui-fluid">
-        <br>
-        <span class="ui-float-label">
-          <input pInputText type="text" class="form-control" id="float-input" required [(ngModel)]="applicant.email" name="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
-            #email="ngModel">
-          <label for="float-input">Email</label>
-          <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
-            <div [hidden]="!email.hasError('required')">Email is required</div>
-            <div [hidden]="!email.hasError('pattern')">Email format should be
-              <small>
-                <b>alex@abc.com</b>
-              </small>
-            </div>
+          <div class="ui-g-12 ui-md-3 ui-fluid">
+            <Label>Title : </Label>
+            <span>{{applicant.applicant.job.title}}</span>
           </div>
-        </span>
+
+
+          <div class="ui-g-12 ui-md-3 ui-fluid">
+            <Label>Position : </Label>
+            <span>{{applicant.applicant.job.position}}</span>
+          </div>
+
+          <div class="ui-g-12 ui-md-4 ui-fluid">
+            <Label>Location : </Label>
+            <span>{{applicant.applicant.job.location}}</span>
+          </div>
+
+          <div class="ui-g-12 ui-fluid">
+            <hr>
+
+          </div>
+
+          <div class="ui-g-12 ui-md-3 ui-fluid">
+            <Label>Phone : </Label>
+            <span>{{applicant.applicant.phone_number}}</span>
+          </div>
+
+
+          <div class="ui-g-12 ui-md-3 ui-fluid">
+            <Label>Status : </Label>
+            <span>{{applicant.applicant.status}}</span>
+          </div>
+
+          <div class="ui-g-12 ui-md-3 ui-fluid">
+            <Label>Date : </Label>
+            <span>{{applicant.applicant.applicant_date | date:'dd/MM/yyyy'}}</span>
+          </div>
+
+          <div class="ui-g-12 ui-md-6 ui-fluid">
+            <Label>email : </Label>
+            <a target="_blank" href="mailto:{{applicant.applicant.email}}">{{applicant.applicant.email}}</a>
+          </div>
+
+          <div class="ui-g-12 ui-md-6 ui-fluid">
+            <Label>Profile URL : </Label>
+            <a target="_blank" href="{{applicant.applicant.profile_url}}">{{applicant.applicant.profile_url}}</a>
+          </div>
+
+
+        </p-panel>
+
       </div>
-
-
-
-      <div class="ui-g-12 ui-md-4 ui-fluid">
-        <br>
-        <span class="ui-float-label">
-          <input pInputText type="text" id="float-input" name="phonenumber" #phonenumber="ngModel" [(ngModel)]="applicant.phone_number"
-            required>
-          <label for="float-input">Phone number</label>
-        </span>
-      </div>
-
-      <div class="ui-g-12 ui-md-4 ui-fluid">
-        <br>
-        <span class="ui-float-label">
-          <input pInputText type="text" id="float-input" name="profileurl" #profileurl="ngModel" [(ngModel)]="applicant.profile_url">
-          <label for="float-input">URL Profile</label>
-        </span>
-      </div>
-
-      <div class="ui-g-12 ui-md-4 ui-fluid">
-        <label>Status</label>
-        <p-dropdown name="status" id="float-input" [options]="statusList" placeholder="Select status" [autoWidth]="false" [(ngModel)]="applicant.status"
-          required></p-dropdown>
-      </div>
-
-      <div class="ui-g-12 ui-md-6 ui-fluid">
-        <h3>Upload CV</h3>
-        <span class="ui-float-label">
-          <input pInputText type="file" id="i_submit" accept="application/pdf">
-        </span>
-      </div>
-
-      <script>
-        $('#i_submit').click(function () {
-          //check whether browser fully supports all File API
-          if (window.File && window.FileReader && window.FileList && window.Blob) {
-            //get the file size and file type from file input field
-            var fsize = $('#i_file')[0].files[0].size;
-
-            if (fsize > 104) //do something if file size more than 1 mb (1048576)
-            {
-              alert(fsize + " bites\nToo big!");
-            } else {
-              alert(fsize + " bites\nYou are good to go!");
-            }
-          } else {
-            alert("Please upgrade your browser, because your current browser lacks some new features we need!");
-          }
-        });
-
-      </script>
-
 
       <div class="ui-g-12">
-        <h3>Cover Letter</h3>
-        <p-editor name="coverletter" #coverletter="ngModel" [(ngModel)]="applicant.cover_letter" [style]="{'height':'320px'}">
-          <p-header>
-            <span class="ql-formats">
-              <select class="ql-size">
-                <option value="small">Petit</option>
-                <option selected></option>
-                <option value="large">Sous-titre</option>
-                <option value="huge">Titre</option>
-              </select>
-            </span>
-            <span class="ql-formats">
-              <button class="ql-bold" aria-label="Bold"></button>
-              <button class="ql-italic" aria-label="Italic"></button>
-              <button class="ql-underline" aria-label="Underline"></button>
-            </span>
+        <p-tabView>
+          <p-tabPanel header="Notes" leftIcon="fa-edit">
 
-            <span class="ql-formats">
-              <button class="ql-list" value="ordered"></button>
-              <button class="ql-list" value="bullet"></button>
-              <select title="Text Alignment" class="ql-align">
-                <option selected>Gauche</option>
-                <option value="center" label="Center"></option>
-                <option value="right" label="Right"></option>
-                <option value="justify" label="Justify"></option>
-              </select>
-            </span>
-            <span class="ql-formats">
-              <button aria-label="Link" class="ql-link"></button>
-            </span>
-          </p-header>
-        </p-editor>
+            <div class="ui-g-12 ui-md-8 ui-fluid">
+              <br>
+              <span class="ui-float-label">
+                <input pInputText type="text" id="float-input" name="score" #score="ngModel" [(ngModel)]="applicant.score" required>
+                <label for="float-input">Score</label>
+              </span>
+            </div>
+
+            <div class="ui-g-12">
+              <button pButton type="button" label="Back" (click)="backClicked()"></button>
+              <button pButton type="submit" label="Save evaluation" class="ui-button-info" [disabled]="applicantForm.invalid"></button>
+            </div>
+
+
+
+          </p-tabPanel>
+
+          <p-tabPanel header="Questions" leftIcon="fa-question-circle">
+
+          </p-tabPanel>
+
+
+
+        </p-tabView>
       </div>
 
 
-      <div class="ui-g-12">
-        <button pButton type="button" label="Back" (click)="backClicked()"></button>
-        <button pButton type="submit" label="Save application" class="ui-button-info" [disabled]="applicantForm.invalid"></button>
-      </div>
 
     </div>
 
