--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-search/applicants-search.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-search/applicants-search.component.html
@@ -73,7 +73,7 @@
 
         <p-column styleClass="col-size">
           <ng-template let-appl="rowData" pTemplate="body">
-            <button pButton icon="fa-balance-scale" pTooltip="Evaluation of the candidate" tooltipPosition="top" [routerLink]="['/applicants', appl.code]"></button>
+            <button pButton icon="fa-balance-scale" pTooltip="Evaluation of the candidate" tooltipPosition="top" [routerLink]="['/applicantnotes', appl.code]"></button>
             <button pButton icon="fa-calendar" pTooltip="Add the Applicant to an Interview Schedule" tooltipPosition="top" [routerLink]="['/schedules/newschedule', appl.fullname]"
             [disabled]="!auth.havePermission('ROLE_ADD_SCHEDULE')"></button>
             <button pButton icon="fa-pencil" pTooltip="Edit" tooltipPosition="top" class="ui-button-warning" [routerLink]="['/applicants', appl.code]"
