--- a/UI-Angular/JobsAdmin/src/styles.css
+++ b/UI-Angular/JobsAdmin/src/styles.css
@@ -68,4 +68,15 @@ label {
   color: orange;
 }
 
+.ui-tabview .ui-tabview-nav {
+  background: transparent;
+  border: 0px;
+}
 
+.ui-widget-header {
+  border: 1px solid #d9d9d9;
+  background: #f6f7f9;
+  color: #1b1d1f;
+  font-weight: normal;
+  font-size: 20px;
+}
