--- a/UI-Angular/JobsAdmin/src/styles.css
+++ b/UI-Angular/JobsAdmin/src/styles.css
@@ -59,6 +59,12 @@ label {
   text-align: center;
 }
 
+.col-size-buttom {
+  width: 75px;
+  text-align: center;
+}
+
+
 .col-acoes {
   width: 90px;
   text-align: center;
@@ -73,3 +79,7 @@ label {
   border: 0px;
 }
 
+.ui-panel.ui-widget {
+  padding: 0;
+  background: #f4f6fa;
+}
